# qwc-oidc-auth

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-oidc-auth.json
src/: oidc_auth.py  server.py
