[project]
name = "qwc-oidc-auth"
version = "v2025.10.14"
description = "OpenID Connect Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.0.3",
    "Flask-JWT-Extended~=4.6.0",
    "Authlib~=1.6.4",
    "requests~=2.32.2",
    "qwc-services-core~=1.4.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
