[project]
name = "qwc-oidc-auth"
version = "v2025.07.18.1"
description = "OpenID Connect Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.0.3",
    "Flask-JWT-Extended~=4.6.0",
    "Authlib~=1.6.5",
    "requests~=2.32.2",
    "qwc-services-core~=1.4.0",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.41",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
